# backend/routes/api.php
@@ -1,6 +1,17 @@
 <?php
 
 use App\Http\Controllers\UserController;
+use App\Http\Controllers\AuthController;
+use App\Http\Middleware\AuthenticateApi;
 use Illuminate\Support\Facades\Route;
 
-Route::apiResource('users', UserController::class);
+Route::middleware([AuthenticateApi::class])->group(function(){
+    Route::get('/users', [UserController::class, 'index']);
+    Route::get('/users/{id}', [UserController::class, 'show']);
+    Route::put('/users/{id}', [UserController::class, 'update']);
+    Route::delete('/users/{id}', [UserController::class, 'destroy']);
+    Route::post('/logout', [AuthController::class, 'logout']);
+});
+
+Route::post('/users', [UserController::class, 'store']);
+Route::post('/login', [AuthController::class, 'login']);
